--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,10 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+
+;replace placeholer % to ~ in ESPAsyncWebServer (WebResponseImpl.h) % used in html & css
+build_flags = -D"TEMPLATE_PLACEHOLDER=(char)126"
+
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.4
 	me-no-dev/AsyncTCP@^1.1.1
