--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "idf.portWin": "COM5"
+    "idf.portWin": "COM5",
+    "github.branchProtection": true,
+    "html.autoCreateQuotes": false
 }
